--- a/smw-ios/Supporting/stagging.xcconfig
+++ b/smw-ios/Supporting/stagging.xcconfig
@@ -9,4 +9,5 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-BASE_URL = http://localhost:8080/api
+API_BASE_PATH = http:/$()/localhost:8080/api
+
